Update 'qb217ynxe-go' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-99c90b978d.2omw.p3.openshiftapps.com/rhtap/rhtap-qe:cdeb63847fefbe26af368246cd42192ff4db0c03@sha256:505587b60b45e1e5c141aed1726fb68f199e58cf2c4d5ede308d92b33a031231

--- a/components/qb217ynxe-go/overlays/development/deployment-patch.yaml
+++ b/components/qb217ynxe-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: qb217ynxe-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-99c90b978d.2omw.p3.openshiftapps.com/rhtap/rhtap-qe:cdeb63847fefbe26af368246cd42192ff4db0c03@sha256:505587b60b45e1e5c141aed1726fb68f199e58cf2c4d5ede308d92b33a031231
+          name: container-image
